test fix notif bell

--- a/StorhaugenWebsite/Pages/HouseholdsBrowser.razor
+++ b/StorhaugenWebsite/Pages/HouseholdsBrowser.razor
@@ -72,7 +72,7 @@ else
                 <div class="info-row">
                     <div class="info-label">
                         <MudIcon Icon="@Icons.Material.Rounded.VpnKey" Size="Size.Small" Color="Color.Secondary" />
-                        <span>Delings-ID</span>
+                        <span>Husstand-ID</span>
                     </div>
                     <div class="info-value">
                         <code class="share-id">@HouseholdState.CurrentHousehold?.UniqueShareId</code>
