--- a/StorhaugenWebsite/Pages/Browse.razor
+++ b/StorhaugenWebsite/Pages/Browse.razor
@@ -141,7 +141,7 @@
 
 @if (_isLoading)
 {
-    <div class="d-flex flex-column gap-3">
+    @* <div class="d-flex flex-column gap-3">
         @for (int i = 0; i < 6; i++)
         {
             <div class="skeleton-card">
@@ -152,7 +152,7 @@
                 </div>
             </div>
         }
-    </div>
+    </div> *@
 }
 else if (_viewMode == "global" && !_recipes.Any())
 {
