--- a/StorhaugenWebsite/Components/HouseholdMembersDialog.razor
+++ b/StorhaugenWebsite/Components/HouseholdMembersDialog.razor
@@ -166,18 +166,9 @@
 
     private bool CanLeaveHousehold()
     {
-        if (Household == null)
-            return false;
+        if (Household == null) return false;
 
-        var currentMember = Household.Members.FirstOrDefault();
-        if (currentMember == null)
-            return false;
-
-        // Can't leave if you're the creator and there are other members
-        var isCreator = currentMember.UserId == Household.CreatedById;
-        var hasOtherMembers = Household.Members.Count > 1;
-
-        return !isCreator || !hasOtherMembers;
+        return true;
     }
 
     private async Task LeaveHousehold()
